--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "preact": "^8.3.0"
+    "medium-editor": "^5.23.3",
+    "preact": "^8.3.0",
+    "react-medium-editor": "^1.8.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
+    "css-loader": "^1.0.0",
+    "preact-compat": "^3.18.2",
+    "style-loader": "^0.22.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
