--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A text editor designed for writers",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode development --config webpack.config.js --progress --colors",
+    "dev-server": "webpack-dev-server --mode development --config webpack.config.js --progress --colors",
+    "dev": "webpack --watch --mode development --config webpack.config.js --output dist/zeno-bundle.js --progress --colors",
     "compile": "webpack --mode production --config webpack.config.js --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
