--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "ramda": "^0.25.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-async-to-generator": "^7.2.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
